--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Andrew Lukac'
+  github_nickname: 'AndyLukac'
+- name: 'Jennifer Vermorel'
+  github_nickname: 'JenniCookie'
